--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/moment-jalaali": "^0.7.5",
     "@types/node": "^16.7.13",
+    "@types/papaparse": "^5.3.5",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.8",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
+    "papaparse": "^5.3.2",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
+    "react-autocomplete": "^1.8.1",
+    "react-calendar": "^3.8.0",
+    "react-datepicker2": "^3.3.13",
     "react-dom": "^18.2.0",
+    "react-dropdown-input": "^0.1.11",
     "react-hook-form": "^7.34.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -48,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-autocomplete": "^1.8.6"
   }
 }
