--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.8",
+    "emailjs-com": "^3.2.0",
     "moment": "^2.29.4",
+    "nodemailer": "^6.7.8",
     "papaparse": "^5.3.2",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
