added: Quicklanding page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vertical-fleet",
+  "homepage": "https://verticalfleet.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
